<resources>
    <string name="app_name">week2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
<<<<<<< HEAD
    <string name="validate">Validate</string> //validate button
    <string name="already_hav">Already have an account ? Login</string> //login
    <string name="skip_for_no">Skip for now</string> //skip
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_an_a">Create an account</string>
    <string name="full_name">Full name</string>
=======
    <string name="create_an_a">

        Create an account
    </string>
    <string name="connexion">

        Connexion
    </string>
    <string name="connect_witgg">

        Connect with Google
    </string>
    <string name="connect_witfb">

        Connect with Facebook
    </string>
    <string name="already_hav">

        Already have an account ? Login
    </string>
    <string name="skip_for_no">

        Skip for now
    </string>
    <string name="let_s_start">

Let\u0027s start
</string>




>>>>>>> dev
</resources>
