<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="716dp"
        android:gravity="center_horizontal|center"
        android:text="@string/create_an_a"
        android:textAppearance="@style/tcreate_an_a"
        android:fontFamily="@font/sf_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Tag_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="127dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textAppearance="@style/full_name"
        android:fontFamily="@font/sf_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_textbox"
        android:hint="@string/full_name"
        android:textColorHint="#FFFFFF"
        android:fontFamily="@font/sf_normal"
        android:paddingLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tag_Name" />


    <TextView
        android:id="@+id/Tag_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/email"
        android:textAlignment="center"
        android:textAppearance="@style/email"
        android:fontFamily="@font/sf_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/border_textbox"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textColorHint="#FFFFFF"
        android:fontFamily="@font/sf_normal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tag_Email" />

    <TextView
        android:id="@+id/Tag_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/password"
        android:textAppearance="@style/password"
        android:fontFamily="@font/sf_semibold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_textbox"
        android:ems="10"
        android:fontFamily="@font/sf_normal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tag_Pass" />


    <Button
        android:id="@+id/button3"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/createanaccount_background"
        android:gravity="center_horizontal|center"
        android:text="@string/validate"
        android:textAppearance="@style/validate"
        android:fontFamily="@font/sf_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="49dp"
        android:gravity="center_horizontal|center"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="79dp"
        android:gravity="center_horizontal|center"
        android:text="@string/skip_for_no"
        android:textAppearance="@style/skip_for_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.642" />

</androidx.constraintlayout.widget.ConstraintLayout>